# dagger-quality-gate

./: .gitignore  .gitmessage  .mcp.json  .safety-project.ini  CLAUDE.md  README.md  ROADMAP.md  SECURITY.md  Taskfile.yml  config.py  main.py  output_parser.py  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: black_formatter_integration.md  code_style_conventions.md  container_optimization.md  project_architecture.md  project_overview.md  python_tools_installation.md  security_and_dependency_management.md  suggested_commands.md  task_completion_checklist.md  taskfile_organization.md
checks/: __init__.py  base.py  markdown.py  python.py  secrets.py  security.py  terraform.py
docs/: PRD.md  checks.md  ci-integration.md  configuration.md  development.md  installation.md  repo-analysis.md  troubleshooting.md
examples/sample-repo/: README.md  bad_code.py  main.tf  requirements.txt  secrets.env
